welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {
^Program:6: error: expected class or object definition
var vuBiscuit: Boolean = false
^Program:8: error: expected class or object definition
while (!haveBaggle()
^