welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	if (vuBiscuit == true)
	{ return true}
	else { return false}}
var vuBiscuit: Boolean = false

while (!haveBaggle()
{ for (i <- 1 to 6)
	{avance(); if (estSurBiscuit()) { vuBiscuit= true}
	}
	recule(6)